pushing the index and css to allow appearance on the files changed tab

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link href="https://fonts.googleapis.com/css?family=Poppins:200i,300,400&amp;display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Raleway:700&amp;display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/styles.css">
-        <title>Portfolio Project Microverse</title>
+        <title>Trials Portfolio Project Microverse</title>
     </head>
     <body>
         <nav id="navbar">
